src/objects/Campaign_Product__c.object
<CustomObject>
    <description>IEC - products to include in campaign</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>IEC - Parent campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns Products</relationshipLabel>
        <relationshipName>Campaigns_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Version_Number__c</fullName>
        <description>IEC - SAP material number of the latest version of product purchased by customer</description>
        <formula>Product_Last_Version__r.SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Version Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Last_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IEC - Latest version of product purchased by customer</description>
        <label>Product Last Version</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaigns Products (Product Last Version)</relationshipLabel>
        <relationshipName>Product_Last_Version</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <description>IEC - SAP material number of the product purchased by customer</description>
        <formula>Product__r.SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IEC - product purchased by customer</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaigns Products</relationshipLabel>
        <relationshipName>Campaigns_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Swapping_Number__c</fullName>
        <description>IEC - SAP material number of the replacement product</description>
        <formula>Swapping_Product__r.SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Swapping Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swapping_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IEC - Product that replaces the product purchased by customer</description>
        <label>Swapping Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaigns Products (Swapping Product)</relationshipLabel>
        <relationshipName>Swapping_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Product</label>
    <nameField>
        <displayFormat>CP{00000}</displayFormat>
        <label>Campaign Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaigns Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>